# lilyenv

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
src/: directories.rs  download.rs  error.rs  fish_config  main.rs  releases.rs  shell.rs  types.rs  version.rs  virtualenvs.rs  zsh_config
