[package]
name = "lilyenv"
version = "1.1.0"
authors = ["Lily Foote"]
edition = "2021"
description = "A Python interpreter and virtualenv manager"
readme = "README.md"
repository = "https://github.com/LilyFoote/lilyenv"
keywords = ["python", "virtualenv"]
categories = ["command-line-utilities", "development-tools", "virtualization"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
current_platform = "0.2.0"
directories = "5.0.1"
flate2 = "1.0.28"
nom = "7.1.3"
octocrab = "0.32.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
tar = "0.4.40"
tokio = "1.35.0"
url = "2.5.0"
