[package]
name = "lilyenv"
version = "1.3.0"
authors = ["Lily Foote"]
edition = "2021"
description = "A Python interpreter and virtualenv manager"
readme = "README.md"
repository = "https://github.com/LilyFoote/lilyenv"
keywords = ["python", "virtualenv"]
categories = ["command-line-utilities", "development-tools", "virtualization"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.5.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
current_platform = "0.2.0"
directories = "6.0.0"
flate2 = "1.0.35"
nom = "7.1.3"
octocrab = "0.43.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
tar = "0.4.43"
thiserror = "2.0.11"
tokio = "1.43.0"
url = "2.5.4"
zstd = "0.13.2"
